# BachelorProefCode

./: .gitignore  .gitmodules  README.md  first.json
cudNN/: example  (+1 more)
scheduling/: CMakeLists.txt  benchmark  compileTestBenchmark.sh  evaluation.cu  execute.sh  main  main.cu  schedulerTestBenchmark.cu
scheduling/Jobs/jobBase/: job.cu  job.h
scheduling/Jobs/jobObserver/: jobObserver.h
scheduling/Jobs/kernels/: printKernel.h
scheduling/Tasks/: task.h
scheduling/benchmarks/customBenchmarks/: campaign_paper.py  configure.sh  dependency-paths.txt  firstTest.py  moveResults.sh  plotResults.py  rundocker.py
scheduling/benchmarks/customBenchmarks/gpugangbenchutil/: benchmark.py  docker.py  taskgen.py
scheduling/benchmarks/customBenchmarks/notebooks/: charts-util.ipynb
scheduling/benchmarks/customBenchmarks/results/scheduler_comparison/: FCFS_benchmark  JLFP_benchmark  benchmark_20250413_203028.csv  (+12 more)
scheduling/common/: deviceProps.cu  deviceProps.h  helpFunctions.cu  maskElement.cu
scheduling/executive/: runbenchmark.cu  runbenchmark.h  scheduling.cu  scheduling.h
scheduling/jobs/busyJob/: busyJob.cu  busyJob.h
scheduling/jobs/jobBase/: job.cu  job.h
scheduling/jobs/jobFactory/: jobFactory.h
scheduling/jobs/jobLaunchInformation/: baseLaunchInformation.h  busyJobLaunchInformation.cu  busyJobLaunchInformation.h  matrixMultiplicationJobLaunchInformation.cu  matrixMutliplicationJobLaunchInformation.h  printJobLaunchInformation.cu  printJobLaunchInformation.h  vectorAddJobLauncInformation.h  vectorAddJobLaunchInformation.cu
scheduling/jobs/jobObserver/: jobObserver.h
scheduling/jobs/kernels/: busyKernel.cu  busyKernel.h  matrixMultiplication.cu  matrixMultiplication.h  printKernel.cu  printKernel.h  vectorAdd.cu  vectorAdd.h
scheduling/jobs/matrixMultiplicationJob/: matrixMultiplicationJob.cu  matrixMultiplicationJob.h
scheduling/jobs/printJob/: printJob.cu  printJob.h
scheduling/jobs/vectorAddJob/: vectorAddJob.cu  vectorAddJob.h
scheduling/results/scheduler_comparison/: benchmark_muut-System_scheduler_comparison_JLFP_20250412_115947_513744.csv  benchmark_muut-System_scheduler_comparison_JLFP_20250412_120007_018956.csv
scheduling/schedulers/FCFSScheduler/: FCFSSceduler.cu  FCFSScheduler.cu  FCFSScheduler.h
scheduling/schedulers/JLFPScheduler/: JLFP.cu  JLFP.h
scheduling/schedulers/asyncCompletionQueue/: completionQueue.cu  completionQueue.h
scheduling/schedulers/dumbScheduler/: dumbScheduler.cu  dumbScheduler.h
scheduling/schedulers/schedulerBase/: scheduler.cu  scheduler.h
scheduling/tasks/: task.cu  task.h
(+103 files in other folders)
